<resources>
    <string name="app_name">SplyzaTeam</string>
    <string name="back">Back</string>
    <string name="invite">Invite</string>
    <string name="invite_now">Invite Now</string>
    <string name="current_members">Current Members</string>
    <string name="limit">Limit</string>
    <string name="current_supporters">Current Supporters</string>
    <string name="invite_permissions">Invite Permissions</string>
    <string name="invite_url_desc">Invite URLs are valid for 7 days. Permissions can be\nchanged from the member management view.</string>
    <string name="what_are_permissions">What are Permissions?</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="copy_link">Copy Link</string>
    <string name="invite_members">Invite Members</string>
    <string name="coach">Coach</string>
    <string name="player_coach">Player Coach</string>
    <string name="player">Player</string>
    <string name="supporter">Supporter</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="copied">Copied!</string>
</resources>