...
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="@id/tvInviteUrlDesc"
            app:layout_constraintStart_toStartOf="@id/tvInviteUrlDesc"
            app:layout_constraintTop_toBottomOf="@id/tvInviteUrlDesc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShareQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-light"
            android:text="@string/share_qr_code"
...
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="@id/tvWhatArePermissions"
            app:layout_constraintStart_toStartOf="@id/tvWhatArePermissions"
            app:layout_constraintTop_toBottomOf="@id/tvWhatArePermissions" />

        <Button
            android:id="@+id/btnCopyLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-light"
            android:text="@string/copy_link"
...
